yoshimi 1.3.x

2016-1-17 Will
- Bugfix. Quick patch from Csaba so Addsynth vice presets are recognised.

2016-1-15 Will
- Bugfix. Format string missing from sprintf :)

yoshimi 1.3.8

2016-1-14 Will
- More doc updates.
- Set version as 1.3.8 rc3.
- Resolved minor ambiguities in command line syntax.
- Final tidy up of docs.
- Set version to 1.3.8 for release.

2016-1-13 Will
- Updated docs.
- Set version as 1.3.8 rc2.
- Corrected part number (CLI numbers *must* start from zero).
- CLI Y axis now uses up/down instead of sharing left/right with X.

2016-1-12 Will
- Created Yoshimi man page.

2016-1-10 Will
- Set version as 1.3.8 rc1.
- Moved banks & roots to end of config file. Will eventually be
  separate file.

2016-1-9 Will
- Added gui state to config file
- All major startup arguments now trigger the config changed message
  for both gui and command line.
- Command line environment status now saved and cross linked with
  gui status defaulting to CL if attempt to disable both.

2016-1-9 Andrew
- Reconfigured main so first instance can access saved config before gui.

2016-1-8 Will
- Synchronised config change warning between gui and command line.
- Implemented saving current part to external instrument.
- Updated repositories.

2016-1-7 Will
- bugfix, Yoshimi now exits correctly with '-c' argument and trailing '&'.
- Help now context sensitive, and list reoganised.
- Command line can now load individual external instruments to the current part.
- Tiny optimisation to SubSynth filter.
- Updated appdata and desktop files.
- Updated Command_Line.txt
- Implemented alsa/jack preferences within command line environment.

2016-1-6 Rob
- Completed Program Change improvements and defined common point
  in SynthEngine for all Program Change calls.

2016-1-4 Will
- Subsynth bugfix. Buffer size no longer has to be divisible by 8.

2016-1-3 Will
- Improved cleanness of program load from various sources.

2016-1-2 Will
- Program change no longer mutes the whole synth.
