@@ -2,6 +2,7 @@ yoshimi 1.3.x
 
 2016-1-17 Will
 - Bugfix. Quick patch from Csaba so Addsynth vice presets are recognised.
+- Patch from Csaba to hide extension in presets window.
 
 2016-1-15 Will
 - Bugfix. Format string missing from sprintf :)
